force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <description>Session of agent chat</description>
    <label>Agent Session</label>
    <nameField>
        <label>Session Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>