force-app/main/default/objects/Session__c/fields/End_User_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_User_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agent Sessions</relationshipLabel>
    <relationshipName>Agent_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>