force-app/main/default/objects/Session__c/fields/Selected_Flight__c.field-meta.xml
<CustomField>
    <fullName>Selected_Flight__c</fullName>
    <label>Selected Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>