force-app/main/default/objects/Session__c/fields/Selected_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Selected_Itinerary__c</fullName>
    <description>User selected Itinerary</description>
    <label>Selected Itinerary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>